@@ -24,6 +24,7 @@ BuildRequires: python
 %{!?_with_python: %{!?_without_python: %define _with_python --with-python}}
 %{!?_with_perl: %{!?_without_perl: %define _with_perl --with-perl}}
 %{!?_with_java: %{!?_without_java: %define _with_java --with-java}}
+%{!?buildsystem: %define buildsystem 0}
 %define comp_cc @CC@
 %define builddoc 0
 
@@ -44,28 +45,36 @@ Group: System
 %package php
 Summary: MonetDB php interface
 Group: System
+%if !%{?buildsystem}
 BuildRequires: php 
+%endif
 %endif
 
 %if %{?_with_python:1}%{!?_with_python:0}
 %package python
 Summary: MonetDB python interface
 Group: System
+%if !%{?buildsystem}
 BuildRequires: python swig
+%endif
 %endif
 
 %if %{?_with_perl:1}%{!?_with_perl:0}
 %package perl
 Summary: MonetDB perl interface
 Group: System
+%if !%{?buildsystem}
 BuildRequires: perl swig 
+%endif
 %endif
 
 %if %{?_with_java:1}%{!?_with_java:0}
 %package java
 Summary: MonetDB java interface
 Group: System
+%if !%{?buildsystem}
 BuildRequires: ant java 
+%endif
 %endif
 
 %package server
