@@ -105,6 +105,12 @@
         }
         "Entry"
         {
+        "MsmKey" = "8:_1FC9E49DEC6F49A29E04CCC97AA8CB8A"
+        "OwnerKey" = "8:_UNDEFINED"
+        "MsmSig" = "8:_UNDEFINED"
+        }
+        "Entry"
+        {
         "MsmKey" = "8:_2032A32A33A840D8BF5348CFB353E4C9"
         "OwnerKey" = "8:_UNDEFINED"
         "MsmSig" = "8:_UNDEFINED"
@@ -346,12 +352,6 @@
         "Entry"
         {
         "MsmKey" = "8:_79503BB0C39C47CC897035E9E24113A0"
-        "OwnerKey" = "8:_UNDEFINED"
-        "MsmSig" = "8:_UNDEFINED"
-        }
-        "Entry"
-        {
-        "MsmKey" = "8:_7A6BF025F94B4E8F85BF92A8B67CCF1A"
         "OwnerKey" = "8:_UNDEFINED"
         "MsmSig" = "8:_UNDEFINED"
         }
@@ -717,6 +717,12 @@
         }
         "Entry"
         {
+        "MsmKey" = "8:_E99A408B4DCC4C52A793D6B8742A013D"
+        "OwnerKey" = "8:_UNDEFINED"
+        "MsmSig" = "8:_UNDEFINED"
+        }
+        "Entry"
+        {
         "MsmKey" = "8:_EA5DE3237DEB42769074C4A5F956B66F"
         "OwnerKey" = "8:_UNDEFINED"
         "MsmSig" = "8:_UNDEFINED"
@@ -808,12 +814,6 @@
         "Entry"
         {
         "MsmKey" = "8:_FC1A1369076D465798D3CC96AFCD8DBD"
-        "OwnerKey" = "8:_UNDEFINED"
-        "MsmSig" = "8:_UNDEFINED"
-        }
-        "Entry"
-        {
-        "MsmKey" = "8:_FD3C4F101B3E4142B4BF67CFCE6EFB7F"
         "OwnerKey" = "8:_UNDEFINED"
         "MsmSig" = "8:_UNDEFINED"
         }
@@ -1195,6 +1195,26 @@
             "TargetName" = "8:restore.mil"
             "Tag" = "8:"
             "Folder" = "8:_A7E9AB371F514EDD8F6D26B2011F98E7"
+            "Condition" = "8:"
+            "Transitive" = "11:FALSE"
+            "Vital" = "11:TRUE"
+            "ReadOnly" = "11:FALSE"
+            "Hidden" = "11:FALSE"
+            "System" = "11:FALSE"
+            "Permanent" = "11:FALSE"
+            "SharedLegacy" = "11:FALSE"
+            "PackageAs" = "3:1"
+            "Register" = "3:1"
+            "Exclude" = "11:FALSE"
+            "IsDependency" = "11:FALSE"
+            "IsolateTo" = "8:"
+            }
+            "{A582A373-4685-4296-BEFE-614B80A702C3}:_1FC9E49DEC6F49A29E04CCC97AA8CB8A"
+            {
+            "SourcePath" = "8:..\\..\\..\\sql\\NT\\share\\MonetDB\\lib\\monetdb-1.4-jdbc.jar"
+            "TargetName" = "8:monetdb-1.4-jdbc.jar"
+            "Tag" = "8:"
+            "Folder" = "8:_2E7A7A2A3AA7443EB1803999F76D6C26"
             "Condition" = "8:"
             "Transitive" = "11:FALSE"
             "Vital" = "11:TRUE"
@@ -2015,26 +2035,6 @@
             "TargetName" = "8:lib_url.dll"
             "Tag" = "8:"
             "Folder" = "8:_B593DAA0787744D6A44D17884E0C3951"
-            "Condition" = "8:"
-            "Transitive" = "11:FALSE"
-            "Vital" = "11:TRUE"
-            "ReadOnly" = "11:FALSE"
-            "Hidden" = "11:FALSE"
-            "System" = "11:FALSE"
-            "Permanent" = "11:FALSE"
-            "SharedLegacy" = "11:FALSE"
-            "PackageAs" = "3:1"
-            "Register" = "3:1"
-            "Exclude" = "11:FALSE"
-            "IsDependency" = "11:FALSE"
-            "IsolateTo" = "8:"
-            }
-            "{A582A373-4685-4296-BEFE-614B80A702C3}:_7A6BF025F94B4E8F85BF92A8B67CCF1A"
-            {
-            "SourcePath" = "8:..\\..\\..\\sql\\NT\\share\\MonetDB\\lib\\jdbcclient-1.3.jar"
-            "TargetName" = "8:jdbcclient-1.3.jar"
-            "Tag" = "8:"
-            "Folder" = "8:_2E7A7A2A3AA7443EB1803999F76D6C26"
             "Condition" = "8:"
             "Transitive" = "11:FALSE"
             "Vital" = "11:TRUE"
@@ -3229,6 +3229,26 @@
             "IsDependency" = "11:FALSE"
             "IsolateTo" = "8:"
             }
+            "{A582A373-4685-4296-BEFE-614B80A702C3}:_E99A408B4DCC4C52A793D6B8742A013D"
+            {
+            "SourcePath" = "8:..\\..\\..\\sql\\NT\\share\\MonetDB\\lib\\jdbcclient-1.4.jar"
+            "TargetName" = "8:jdbcclient-1.4.jar"
+            "Tag" = "8:"
+            "Folder" = "8:_2E7A7A2A3AA7443EB1803999F76D6C26"
+            "Condition" = "8:"
+            "Transitive" = "11:FALSE"
+            "Vital" = "11:TRUE"
+            "ReadOnly" = "11:FALSE"
+            "Hidden" = "11:FALSE"
+            "System" = "11:FALSE"
+            "Permanent" = "11:FALSE"
+            "SharedLegacy" = "11:FALSE"
+            "PackageAs" = "3:1"
+            "Register" = "3:1"
+            "Exclude" = "11:FALSE"
+            "IsDependency" = "11:FALSE"
+            "IsolateTo" = "8:"
+            }
             "{A582A373-4685-4296-BEFE-614B80A702C3}:_EA5DE3237DEB42769074C4A5F956B66F"
             {
             "SourcePath" = "8:..\\..\\..\\sql\\NT\\lib\\MonetDB\\lib_sql_server.lib"
@@ -3535,26 +3555,6 @@
             "TargetName" = "8:lib_sql_server.dll"
             "Tag" = "8:"
             "Folder" = "8:_B593DAA0787744D6A44D17884E0C3951"
-            "Condition" = "8:"
-            "Transitive" = "11:FALSE"
-            "Vital" = "11:TRUE"
-            "ReadOnly" = "11:FALSE"
-            "Hidden" = "11:FALSE"
-            "System" = "11:FALSE"
-            "Permanent" = "11:FALSE"
-            "SharedLegacy" = "11:FALSE"
-            "PackageAs" = "3:1"
-            "Register" = "3:1"
-            "Exclude" = "11:FALSE"
-            "IsDependency" = "11:FALSE"
-            "IsolateTo" = "8:"
-            }
-            "{A582A373-4685-4296-BEFE-614B80A702C3}:_FD3C4F101B3E4142B4BF67CFCE6EFB7F"
-            {
-            "SourcePath" = "8:..\\..\\..\\sql\\NT\\share\\MonetDB\\lib\\monetdb-1.3-jdbc.jar"
-            "TargetName" = "8:monetdb-1.3-jdbc.jar"
-            "Tag" = "8:"
-            "Folder" = "8:_2E7A7A2A3AA7443EB1803999F76D6C26"
             "Condition" = "8:"
             "Transitive" = "11:FALSE"
             "Vital" = "11:TRUE"
