@@ -1,0 +1,63 @@
+stderr of test 'find_first_on_void_void.SF-1505232` in directory 'tests/BugTracker` itself:
+
+
+# 09:56:06 >  
+# 09:56:06 >  Mtimeout -timeout 60 Mserver "--config=/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/conf/MonetDB.conf" --debug=10 --set "monet_mod_path=/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/plain/.libs:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/plain:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/contrib/.libs:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/contrib:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/calibrator/.libs:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/calibrator:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/mnetcdf/.libs:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/mnetcdf:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/mapi/.libs:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/mapi" --set "gdk_dbfarm=/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/dbfarm" --set "sql_logdir=/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/log" --set mapi_port=34374 --set monet_prompt= --trace --dbname=mTests_tests_BugTracker  < find_first_on_void_void.SF-1505232.milS
+# 09:56:06 >  
+
+# builtin opt 	config = ${prefix}/etc/MonetDB.conf
+# builtin opt 	gdk_arch = 64bitx86_64-redhat-linux-gnu
+# builtin opt 	gdk_version = 4.11.3
+# builtin opt 	monet_pid = 32385
+# builtin opt 	prefix = /ufs/sjoerd/Monet
+# builtin opt 	exec_prefix = ${prefix}
+# builtin opt 	gdk_dbname = tst
+# builtin opt 	gdk_dbfarm = ${prefix}/var/MonetDB
+# builtin opt 	gdk_debug = 8
+# builtin opt 	gdk_mem_bigsize = 1048576
+# builtin opt 	gdk_vm_minsize = 137438953472
+# builtin opt 	gdk_alloc_map = yes
+# builtin opt 	monet_admin = adm
+# builtin opt 	monet_prompt = >
+# builtin opt 	monet_welcome = yes
+# builtin opt 	monet_mod_path = ${exec_prefix}/lib/MonetDB:${exec_prefix}/lib/bin
+# builtin opt 	monet_daemon = yes
+# builtin opt 	host = localhost
+# builtin opt 	mapi_port = 50000
+# builtin opt 	mapi_noheaders = no
+# builtin opt 	mapi_debug = 0
+# builtin opt 	mapi_clients = 2
+# builtin opt 	sql_debug = 0
+# builtin opt 	sql_logdir = ${prefix}/var/MonetDB/log
+# config opt 	prefix = /ufs/sjoerd/Monet
+# config opt 	exec_prefix = ${prefix}
+# config opt 	gdk_dbfarm = ${prefix}/var/MonetDB/dbfarm
+# config opt 	gdk_dbname = demo
+# config opt 	gdk_alloc_map = no
+# config opt 	gdk_embedded = no
+# config opt 	gdk_debug = 0
+# config opt 	monet_admin = adm
+# config opt 	monet_prompt = MonetDB>
+# config opt 	monet_welcome = yes
+# config opt 	monet_mod_path = ${exec_prefix}/lib/MonetDB:${exec_prefix}/lib/bin
+# config opt 	monet_daemon = no
+# config opt 	mapi_port = 50000
+# config opt 	mapi_debug = 0
+# config opt 	sql_debug = 0
+# config opt 	sql_logdir = ${prefix}/var/MonetDB/log
+# config opt 	pf_httpd_port = 48080
+# config opt 	xquery_output = dm
+# config opt 	xquery_cacheMB = 100
+# cmdline opt 	config = /ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/conf/MonetDB.conf
+# cmdline opt 	gdk_debug = 10
+# cmdline opt 	monet_mod_path = /ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/plain/.libs:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/plain:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/contrib/.libs:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/contrib:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/calibrator/.libs:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/calibrator:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/mnetcdf/.libs:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/mnetcdf:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/mapi/.libs:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/mapi
+# cmdline opt 	gdk_dbfarm = /ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/dbfarm
+# cmdline opt 	sql_logdir = /ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/log
+# cmdline opt 	mapi_port = 34374
+# cmdline opt 	monet_prompt = 
+# cmdline opt 	gdk_dbname = mTests_tests_BugTracker
+
+# 09:56:06 >  
+# 09:56:06 >  Done.
+# 09:56:06 >  
+
